# lambda-rotate-google-service-user

./: .gitignore  Cargo.toml  README.md  build.sh  renovate.json  test.json
.github/workflows/: ci.yml
src/: main.rs
