[package]
name = "lambda-rotate-google-service-user"
version = "0.1.0"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2021"
description = "Rotate Google Service User Credentials"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mettke/lambda-rotate-google-service-user"
readme = "./README.md"
keywords = ["lambda", "secrets", "manager", "rotate", "google", "service-user", "credentials"]
categories = ["command-line-utilities"]
resolver = "2"

[features]
test = ["lambda-runtime-types/test"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.13"
jsonwebtoken = "7"
lambda-runtime-types = { version = "0.3", default-features = false, features = ["rotate"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "2"
